--- a/public/css/overwatch_today.css
+++ b/public/css/overwatch_today.css
@@ -1,5 +1,5 @@
 body {
-    background: url('https://www.owfire.com/images/maps/kings-row-1.jpg') no-repeat center center fixed;
+    background: url('/img/bg.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -28,7 +28,7 @@ h1 {
 }
 
 .container {
-    padding-top: 250px;
+    padding-top: 150px;
 }
 
 .card {
