Halloween (gamemodes, colors)

--- a/public/css/overwatch_today.css
+++ b/public/css/overwatch_today.css
@@ -159,5 +159,13 @@ td {
 }
 
 .chateaudeathmatch {
-    background-color: #9932CC;
+    background-color: #9826ad;
+}
+
+.junkensteinrevenge {
+    background-color: #5f6a7d;
+}
+
+.junkensteinendless {
+    background-color: #6f6262;
 }
