--- a/public/css/overwatch_today.css
+++ b/public/css/overwatch_today.css
@@ -36,6 +36,13 @@ h1 {
     background: none;
 }
 
+.cardRibbon {
+    position: absolute;
+    text-transform: uppercase;
+    left: 0;
+    top:10px;
+}
+
 .card-img-top {
     background: url('/img/bg.svg');
     height: 130px;
