--- a/public/css/overwatch_today.css
+++ b/public/css/overwatch_today.css
@@ -1,8 +1,7 @@
 body {
-    background: url('/img/bg.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
     background-size: cover;
     color: #FFF;
 }
