Rename background images, add Overwatch cursor

--- a/public/css/overwatch_today.css
+++ b/public/css/overwatch_today.css
@@ -4,6 +4,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     color: #FFF;
+    cursor: url(../overwatch.cur), auto;
 }
 
 .overlay {
