--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -305,3 +305,182 @@ td {
 .card > .form-group {
     margin-bottom: 0;
 }
+
+
+@media (max-width: 1279px) {
+    .container-fluid {
+        max-width: 100%;
+        margin-top: 40px;
+        padding: 0 30px;
+    }
+
+    h1 {
+        font-size: 80px;
+        line-height: normal;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    .arcades .ow-icon,
+    .arcades .ow-arcade-icon {
+        height: 80px;
+    }
+
+    .arcades .ow-icon {
+        margin-right: 5px;
+    }
+
+    .arcades .ow-arcade-icon {
+        margin-left: 20px;
+    }
+
+    .arcades .header {
+        justify-content: center;
+    }
+
+    .header > .reset {
+        font-size: 40px;
+        text-align: center;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .arcades .notice {
+        margin-bottom: 20px;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .card-grid {
+        display: flex;
+        justify-content: center;
+    }
+
+    .card-grid .card {
+        margin-right: 0;
+        width: 48%;
+        max-width: 503px;
+    }
+
+    .card-grid .card.-large {
+        width: 100%;
+        max-width: 858px;
+        margin: 0 auto 30px;
+    }
+
+    .secondary > .row + .row {
+        margin-top: 30px;
+    }
+
+    .card-grid .card + .card {
+        margin-left: 4%;
+    }
+
+    .footer {
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+
+    .card-ribbon {
+        left: -25px;
+        top: 20px;
+        font-size: 20px;
+        padding: 18px 40px;
+    }
+
+    .card-ribbon::after {
+        bottom: -25px;
+        width: 25px;
+        border-width: 25px 0 0 25px;
+    }
+
+    .card > .card-body {
+        height: 125px;
+    }
+
+    .card-body > .item {
+        font-family: 'overwatch-italic', sans-serif;
+    }
+
+    .card-body > .card-text {
+        font-size: 40px;
+        margin: 15px 20px 0;
+    }
+
+    .card-body > .card-title {
+        font-size: 40px;
+        margin: 10px 20px 0;
+    }
+
+    .info-panel {
+        margin: 20px auto 0;
+        max-width: 90%;
+        align-items: flex-start;
+    }
+
+    .info-panel .badge {
+        padding: 5px;
+        font-size: 14px;
+    }
+
+    .info-panel .badge + .badge {
+        margin-top: 5px;
+    }
+
+    .info-panel > .info {
+        display: flex;
+        flex-direction: column;
+        margin-right: 20px;
+    }
+
+    .arcades input.btn,
+    .arcades a.btn {
+        font-size: 16px;
+        margin-bottom: 5px;
+    }
+
+    .arcades input.btn[type="submit"] {
+        margin: 20px 0 40px;
+    }
+}
+
+@media (max-width: 767px) {
+    h1 {
+        font-size: 60px;
+    }
+
+    .arcades .ow-icon,
+    .arcades .ow-arcade-icon {
+        height: 60px;
+    }
+
+    .card-grid .card {
+        width: 100%;
+        margin: 0 auto 20px;
+    }
+
+    .card-grid .card.-large {
+        margin-bottom: 20px;
+    }
+
+    .secondary > .row + .row {
+        margin-top: 0;
+    }
+
+    .card-grid .card + .card {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .card-grid .card.-large .card-ribbon {
+        top: 2.2vw;
+    }
+
+    .info-panel {
+        margin-top: 10px;
+    }
+
+    .header > .reset {
+        font-size: 35px;
+    }
+}
