--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -131,7 +131,7 @@ td {
     border-style: solid;
     border-color: #0C590A transparent transparent transparent;
     left: 0;
-    width: 0.8vw;
+    width: 0;
     border-width: 0.8vw 0 0 0.8vw;
 }
 
@@ -390,7 +390,6 @@ td {
 
     .card-ribbon::after {
         bottom: -25px;
-        width: 25px;
         border-width: 25px 0 0 25px;
     }
 
